# eml-jupyter

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/eml_jupyter/: __init__.py  _formatter.py  magic.py
tests/: test_formatter.py  test_shim.py
