[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "eml-jupyter"
version = "0.1.1"
description = "IPython/Jupyter display formatter and cell magic for the EML substrate."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PROPRIETARY-PRE-RELEASE" }
authors = [
    { name = "Monogate Research" },
]
keywords = ["sympy", "jupyter", "ipython", "eml", "pfaffian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "sympy>=1.12",
    "eml-cost>=0.2.0",
    "eml-discover>=0.2.0",
    "eml-witness>=0.1.0",
]

[project.optional-dependencies]
notebook = [
    "ipython>=8.0",
]
dev = [
    "pytest>=7.0",
    "ipython>=8.0",
    "mypy>=1.5",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://monogate.org"
Repository = "https://github.com/almaguer1986/eml-jupyter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eml_jupyter = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
